# EduShare_Resource_Exchange__Platform

./: CMakeLists.txt  README.md
DataBase/: database.db
mainEntities/: Entities.h  career.cpp  career.h  resource.cpp  resource.h  school.cpp  school.h  subject.cpp  subject.h  user.cpp  user.h
main_entities/: career.cpp  career.h  resource.cpp  resource.h  school.cpp  school.h  subject.cpp  subject.h  user.cpp  user.h
main_menu/: New_resource.cpp  main.cpp  newUser.cpp
main_menu/Users/: SteveTene.txt
system/: ResoureSystem.cpp
systemFunctions/: ResourceSystem.cpp  ResourceSystem.h
